--- a/cluster/manifests/z-karpenter/07-karpenter.k8s.aws_ec2nodeclasses.yaml
+++ b/cluster/manifests/z-karpenter/07-karpenter.k8s.aws_ec2nodeclasses.yaml
@@ -242,6 +242,11 @@ spec:
                 enum:
                 - RAID0
                 type: string
+              ipv6AddressCount:
+                description: IPv6AddressCount controls the number of IPv6 addresses
+                  assigned to instances that are launched with the nodeclass.
+                format: int64
+                type: integer
               metadataOptions:
                 default:
                   httpEndpoint: enabled
