flex karpenter node-pool configurations
Signed-off-by: Mahmoud Gaballah <mahmoud.gaballah@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -1146,3 +1146,9 @@ control_plane_graceful_shutdown: "true"
 #  fs.aio-max-nr = 8388608
 #  fs.inotify.max_user_watches = 100000
 sysctl_settings: ""
+
+
+
+# scheduling_controls
+teapot_admission_controller_scheduling_controls_enabled: "false"
+teapot_admission_controller_scheduling_controls_default_architecture: "amd64"
