--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -1101,3 +1101,8 @@ eks_ip_family: "ipv4"
 # prefix delegation can only be configured for ipv4. For ipv6 it can only be
 # true.
 aws_vpc_cni_prefix_delegation: "true"
+eks_zalando_iam_aws_proxy_cpu: "100m"
+eks_zalando_iam_aws_proxy_memory: "512Mi"
+eks_zalando_iam_aws_proxy_hpa_max_replicas: "10"
+eks_zalando_iam_aws_proxy_hpa_cpu_target: "80"
+eks_zalando_iam_aws_proxy_hpa_memory_target: "80"
