Make deployment-service-controller call via serviceaccount
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/manifests/deployment-service/controller-statefulset.yaml
+++ b/cluster/manifests/deployment-service/controller-statefulset.yaml
@@ -33,6 +33,9 @@ spec:
           args:
             - "--config-namespace=kube-system"
             - "--decrypt-kms-alias-arn=arn:aws:kms:{{ .Cluster.Region }}:{{ .Cluster.InfrastructureAccount | getAWSAccountID }}:alias/deployment-secret"
+            # {{ if eq .Cluster.Provider "zalando-eks" }}
+            - --use-service-account
+            # {{ end }}
           env:
             - name: AWS_REGION
               value: "{{.Cluster.Region}}"
