--- a/cluster/node-pools/worker-splitaz/userdata.yaml
+++ b/cluster/node-pools/worker-splitaz/userdata.yaml
@@ -85,9 +85,9 @@ write_files:
       podPidsLimit: {{ .NodePool.ConfigItems.pod_max_pids }}
       cpuManagerPolicy: {{ .NodePool.ConfigItems.cpu_manager_policy }}
 {{- if eq .Cluster.Provider "zalando-eks" }}
-      # TODO: Uses lower limit for simplicity need to support dynamic value
-      # based on instance type.
-      maxPods: 14
+      # replaced with dynamic value based on instance type during instance
+      # start-up.
+      maxPods: __MAX_PODS__
 {{- else }}
       maxPods: {{ nodeCIDRMaxPods (parseInt64 .Cluster.ConfigItems.node_cidr_mask_size) (parseInt64 .Cluster.ConfigItems.node_max_pods_extra_capacity) }}
 {{- end }}
