add latest CRD spec for resource cleanup tasks

--- a/cluster/manifests/deployment-service/00-crd-cleanup-task.yaml
+++ b/cluster/manifests/deployment-service/00-crd-cleanup-task.yaml
@@ -97,6 +97,12 @@ spec:
           status:
             description: CDPResourceCleanupTaskStatus is the status part of the CDPResourceCleanupTask.
             properties:
+              finishedAt:
+                description: |-
+                  The timestamp when this resource cleanup task has finished.
+                  The main purpose is to be able to determine age of finished tasks and clean them up.
+                format: date-time
+                type: string
               phase:
                 default: Created
                 description: |-
