fabric: update crd
* k8s: Fix preStop hook
* k8s: Fix preStop sleep value (doesn't support 0)
* migration: depreciate script
* deploy: fix StackSet preStop hook
* readme: add info for running & debugging locally
* e2e: fix connection between fg & stackset
* versioning: update crd for e2e test

Signed-off-by: Mustafa Abdelrahman <mustafa.abdelrahman@zalando.de>

--- a/cluster/manifests/fabric-gateway/fabricgateway_crd.yaml
+++ b/cluster/manifests/fabric-gateway/fabricgateway_crd.yaml
@@ -455,6 +455,12 @@ spec:
                       The name of the StackSet resource in the same namespace which
                       should be handling requests coming through FabricGateway
                     type: string
+                  stackVersion:
+                    description: |-
+                      EXPERIMENTAL: This field is experimental and may be removed in the future
+                      Specifies stack version for this gateway
+                      it should match stackset.spec.stackTemplate.spec.version field
+                    type: string
                 required:
                 - hosts
                 - stackSetName
