Configure flannel-awaiter requests.
Signed-off-by: gargravarr <rodrigo.gargravarr@gmail.com>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -381,6 +381,9 @@ kube_proxy_verbose_level: "2"
 flannel_cpu: "25m"
 flannel_memory: "100Mi"
 
+flannel_awaiter_cpu: "25m"
+flannel_awaiter_memory: "50Mi"
+
 # nvidia device plugin
 nvidia_device_plugin_cpu: "10m"
 nvidia_device_plugin_memory: "50Mi"
