--- a/cluster/manifests/flannel/daemonset.yaml
+++ b/cluster/manifests/flannel/daemonset.yaml
@@ -43,12 +43,12 @@ spec:
         stdin: true
         resources:
           requests:
-            cpu: 25m
-            memory: 50Mi
+            cpu: "{{ .Cluster.ConfigItems.flannel_awaiter_cpu }}"
+            memory: "{{ .Cluster.ConfigItems.flannel_awaiter_memory }}"
             ephemeral-storage: 256Mi
           limits:
-            cpu: 25m
-            memory: 50Mi
+            cpu: "{{ .Cluster.ConfigItems.flannel_awaiter_cpu }}"
+            memory: "{{ .Cluster.ConfigItems.flannel_awaiter_memory }}"
         startupProbe:
           exec:
             command:
