update zalando-iam-aws-proxy to a compliant image

--- a/cluster/manifests/zalando-iam-aws-proxy/deployment.yaml
+++ b/cluster/manifests/zalando-iam-aws-proxy/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccountName: zalando-iam-aws-proxy
       containers:
       - name: proxy
-        image: mikkeloscar/zalando-iam-aws-proxy:1
+        image: 926694233939.dkr.ecr.eu-central-1.amazonaws.com/production_namespace/teapot/zalando-iam-aws-proxy:main-1
         args:
         - "--apiserver-url=https://kubernetes.default.svc.cluster.local"
         - "--ca-file-path=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
