Add session manager logging CF resources - update worker/master IAM roles to allow sending logs to CloudWatch Log Groups - add destination arn via secret config

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -105,6 +105,11 @@ pipeline:
               secretKeyRef:
                 name: kubernetes-e2e-config-secret
                 key: "AUDITTRAIL_ROOT_ACCOUNT_ROLE"
+          - name: SESSION_MANAGER_DESTINATION_ARN
+            valueFrom:
+              secretKeyRef:
+                name: kubernetes-e2e-config-secret
+                key: "SESSION_MANAGER_DESTINATION_ARN"
           - name: APISERVER_BUSINESS_PARTNER_IDS
             valueFrom:
               secretKeyRef:
