--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -159,7 +159,7 @@ Resources:
       # Tags:
       # - Key: "application"
       #   Value: "kubernetes"
-      # TODO: vanity domain name? (certficate issue)
+      # TODO: vanity domain name? (certificate issue)
       #
       #
   EKSIdentityProvider:
