--- a/cluster/manifests/fabric-gateway/deployment.yaml
+++ b/cluster/manifests/fabric-gateway/deployment.yaml
@@ -1,4 +1,4 @@
-# {{ $version := "master-263" }}
+# {{ $version := "master-265" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -46,6 +46,9 @@ spec:
             - -ssl-policy={{ .Cluster.ConfigItems.fabric_gateway_controller_ssl_policy }}
             {{ if eq .Cluster.ConfigItems.fabric_gateway_controller_allow_all_filters "true" }}
             - -allow-all-filters=true
+            {{ end }}
+            {{ if eq .Cluster.ConfigItems.fabric_gateway_controller_enable_versioning "true" }}
+            - -enable-versioning
             {{ end }}
           resources:
             requests:
