add some hacks to make e2e progress

--- a/cluster/manifests/zalando-iam-aws-proxy/routegroup.yaml
+++ b/cluster/manifests/zalando-iam-aws-proxy/routegroup.yaml
@@ -9,7 +9,7 @@ metadata:
     component: zalando-iam-aws-proxy
 spec:
   hosts:
-    - {{.Cluster.LocalID}}-zalando-iam-aws-proxy.{{ .Values.hosted_zone }}
+    - {{.Cluster.LocalID}}.{{ .Values.hosted_zone }}
   backends:
     - name: zalando-iam-aws-proxy
       type: service
