--- a/cluster/manifests/roles/cluster-admin-binding.yaml
+++ b/cluster/manifests/roles/cluster-admin-binding.yaml
@@ -10,3 +10,6 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
   name: okta:common/administrator
+- apiGroup: rbac.authorization.k8s.io
+  kind: User
+  name: zalando-iam:zalando:service:stups_kubernetes
