make it possible to know cluster provider when looking at the stack

--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -4,6 +4,7 @@ Metadata:
   Tags:
     InfrastructureComponent: "true"
     application: "kubernetes"
+    cluster-provider: "{{ .Cluster.Provider }}"
 Resources:
 {{ if eq .Cluster.Provider "zalando-eks" }}
   EKSClusterRole:
