--- a/cluster/manifests/fabric-gateway/01-rbac.yaml
+++ b/cluster/manifests/fabric-gateway/01-rbac.yaml
@@ -54,6 +54,16 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups:
+      - apps
+    resources:
+      - controllerrevisions
+    verbs:
+      - list
+      - watch
+      - get
+      - create
+      - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
