add region condition to session logging subscription filter

--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -2148,6 +2148,7 @@ Resources:
           shellProfile:
             linux: 'bash'
 
+{{- if eq .Cluster.Region "eu-central-1"}}
   SessionManagerSubscriptionFilter:
     Type: AWS::Logs::SubscriptionFilter
     Properties:
@@ -2181,6 +2182,7 @@ Resources:
                 Resource:
                   - !GetAtt SessionManagerLogGroup.Arn
       RoleName: "SessionManagerSubscriptionFilterRole"
+{{- end }}
 
   AWSNodeDecommissionerIAMRole:
     Type: 'AWS::IAM::Role'
