--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -2131,6 +2131,9 @@ Resources:
   SessionManagerPreferencesDocument:
     Type: AWS::SSM::Document
     Properties:
+      Tags:
+        - Key: InfrastructureComponent
+          Value: "false"
       UpdateMethod: NewVersion
       Name: SSM-SessionManagerRunShell
       DocumentFormat: YAML
