--- a/cluster/manifests/skipper/01-rbac-pod-deletion-cost-controller.yaml
+++ b/cluster/manifests/skipper/01-rbac-pod-deletion-cost-controller.yaml
@@ -24,6 +24,7 @@ rules:
       - list
       - watch
       - update
+      - patch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
