kube-aws-iam-controller: Update to version v0.3.0-29-g39e496d
Update container-registry.zalando.net/teapot/kube-aws-iam-controller to version v0.3.0-29-g39e496d

--- a/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
+++ b/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       hostNetwork: true
       containers:
       - name: kube-aws-iam-controller
-        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-26-ga0a8a3b
+        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-29-g39e496d
         env:
         - name: AWS_DEFAULT_REGION
           value: "{{.Cluster.Region}}"
