configurable memory for cost_controller pods

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -1096,3 +1096,6 @@ sysctl_settings: ""
 
 # enables/disables the minDomains field for pod topology spread.
 min_domains_in_pod_topology_spread_enabled: "true"
+
+
+pod_deletion_cost_controller_memory: 200Mi
