--- a/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
+++ b/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
@@ -46,10 +46,10 @@ spec:
         resources:
           limits:
             cpu: "50m"
-            memory: 100Mi
+            memory: "{{ .Cluster.ConfigItems.pod_deletion_cost_controller_memory }}"
           requests:
             cpu: "50m"
-            memory: 100Mi
+            memory: "{{ .Cluster.ConfigItems.pod_deletion_cost_controller_memory }}"
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
