config: pod-deletion-cost-controller
cpu, memory and log level configurable

Signed-off-by: Sandor Szücs <sandor.szuecs@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -215,6 +215,12 @@ skipper_routesrv_target_average_utilization_memory: "80"
 skipper_ingress_routesrv_scaling_schedules: ""
 skipper_routesrv_log_level: "INFO"
 
+# skipper-ingress component pod-deletion-cost-controller
+skipper_pod_deletion_cost_controller_memory: 200Mi
+skipper_pod_deletion_cost_controller_cpu: 50m
+# klog style -v=0
+skipper_pod_deletion_cost_controller_log_v: "0"
+
 # polarsignals - only enabled for testing teapot
 polarsignals_enabled: "false"
 
@@ -1097,5 +1103,3 @@ sysctl_settings: ""
 # enables/disables the minDomains field for pod topology spread.
 min_domains_in_pod_topology_spread_enabled: "true"
 
-
-pod_deletion_cost_controller_memory: 200Mi
