--- a/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
+++ b/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
@@ -26,7 +26,7 @@ spec:
       containers:
       - args:
         - -address=:8080
-        - -v=0
+        - -v={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_log_v }}
         image: container-registry.zalando.net/gwproxy/pod-deletion-cost-controller:main-20
         name: pod-deletion-cost-controller
         ports:
@@ -45,11 +45,11 @@ spec:
           timeoutSeconds: 3
         resources:
           limits:
-            cpu: "50m"
-            memory: "{{ .Cluster.ConfigItems.pod_deletion_cost_controller_memory }}"
+            cpu: "{{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_cpu }}"
+            memory: "{{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_memory }}"
           requests:
-            cpu: "50m"
-            memory: "{{ .Cluster.ConfigItems.pod_deletion_cost_controller_memory }}"
+            cpu: "{{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_cpu }}"
+            memory: "{{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_memory }}"
         securityContext:
           readOnlyRootFilesystem: true
           runAsNonRoot: true
