--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -2125,7 +2125,7 @@ Resources:
   SessionManagerLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: "SessionManager-{{accountID .Cluster.InfrastructureAccount}}-{{.Cluster.LocalID}}"
+      LogGroupName: "SessionManager-{{.Cluster.LocalID}}"
       RetentionInDays: 30
 
   SessionManagerPreferencesDocument:
@@ -2133,20 +2133,13 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      Tags:
-        - Key: InfrastructureComponent
-          Value: "false"
       UpdateMethod: NewVersion
-{{ if eq .Cluster.Environment "e2e" }} # test for valid cloudformation in e2e tests, but do not set account level preferences
-      Name: "SSM-SessionManagerRunShell-{{.Cluster.LocalID}}"
-{{ else }}
-      Name: "SSM-SessionManagerRunShell"
-{{- end }}
+      Name: "SSM-SessionManager-{{.Cluster.Alias}}"
       DocumentFormat: YAML
       DocumentType: Session
       Content:
         schemaVersion: '1.0'
-        description: Document to hold regional settings for Session Manager
+        description: Document to hold settings for Kubernetes EC2 SSM sessions
         sessionType: Standard_Stream
 
 {{- if eq .Cluster.Region "eu-central-1"}}
@@ -2155,7 +2148,7 @@ Resources:
     Properties:
       LogGroupName: !Ref SessionManagerLogGroup
       RoleArn: !GetAtt SessionManagerSubscriptionFilterRole.Arn
-      FilterName: "SessionManager-{{accountID .Cluster.InfrastructureAccount}}-{{.Cluster.LocalID}}"
+      FilterName: "SessionManager-{{.Cluster.LocalID}}"
       FilterPattern: ""
       DestinationArn: "{{.Cluster.ConfigItems.session_manager_destination_arn}}"
 
