config: init sync for pod-cost-del-ctl
Signed-off-by: Sandor Szücs <sandor.szuecs@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -220,6 +220,9 @@ skipper_pod_deletion_cost_controller_memory: 200Mi
 skipper_pod_deletion_cost_controller_cpu: 50m
 # klog style -v=0
 skipper_pod_deletion_cost_controller_log_v: "0"
+# pod informer sync config
+skipper_pod_deletion_cost_controller_poll_interval: "10s"
+skipper_pod_deletion_cost_controller_poll_timeout: "10s"
 
 # polarsignals - only enabled for testing teapot
 polarsignals_enabled: "false"
@@ -1102,4 +1105,3 @@ sysctl_settings: ""
 
 # enables/disables the minDomains field for pod topology spread.
 min_domains_in_pod_topology_spread_enabled: "true"
-
