--- a/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
+++ b/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
@@ -27,6 +27,8 @@ spec:
       - args:
         - -address=:8080
         - -v={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_log_v }}
+        - -poll-interval={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_poll_interval }}
+        - -poll-timeout={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_poll_timeout }}
         image: container-registry.zalando.net/gwproxy/pod-deletion-cost-controller:main-20
         name: pod-deletion-cost-controller
         ports:
