--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -218,6 +218,9 @@ skipper_routesrv_log_level: "INFO"
 # skipper-ingress component pod-deletion-cost-controller
 skipper_pod_deletion_cost_controller_memory: 200Mi
 skipper_pod_deletion_cost_controller_cpu: 50m
+# vpa min values
+skipper_pod_deletion_cost_controller_memory_min: 128Mi
+skipper_pod_deletion_cost_controller_cpu_min: 25m
 # klog style -v=0
 skipper_pod_deletion_cost_controller_log_v: "0"
 
@@ -1102,4 +1105,3 @@ sysctl_settings: ""
 
 # enables/disables the minDomains field for pod topology spread.
 min_domains_in_pod_topology_spread_enabled: "true"
-
