Add permissions to list lambda functions and tags for this functions for zmon role

--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -1726,6 +1726,12 @@ Resources:
               - Action: 'kinesis:Describe*'
                 Effect: Allow
                 Resource: '*'
+              - Action: 'lambda:ListFunctions'
+                Effect: Allow
+                Resource: '*'
+              - Action: 'lambda:ListTags'
+                Effect: Allow
+                Resource: '*'
               - Action: 'opsworks:Describe*'
                 Effect: Allow
                 Resource: '*'
