--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -2130,8 +2130,6 @@ Resources:
 
   SessionManagerPreferencesDocument:
     Type: AWS::SSM::Document
-    DeletionPolicy: Retain
-    UpdateReplacePolicy: Retain
     Properties:
       UpdateMethod: NewVersion
       Name: "SSM-SessionManager-{{.Cluster.Alias}}"
@@ -2141,6 +2139,14 @@ Resources:
         schemaVersion: '1.0'
         description: Document to hold settings for Kubernetes EC2 SSM sessions
         sessionType: Standard_Stream
+        inputs:
+          cloudWatchLogGroupName: !Ref SessionManagerLogGroup
+          cloudWatchEncryptionEnabled: false
+          cloudWatchStreamingEnabled: true
+          runAsEnabled: false
+          idleSessionTimeout: '20'
+          shellProfile:
+            linux: 'bash'
 
 {{- if eq .Cluster.Region "eu-central-1"}}
   SessionManagerSubscriptionFilter:
