--- a/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
+++ b/cluster/manifests/skipper/pod-deletion-cost-controller.yaml
@@ -29,7 +29,11 @@ spec:
         - -v={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_log_v }}
         - -poll-interval={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_poll_interval }}
         - -poll-timeout={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_poll_timeout }}
-        image: container-registry.zalando.net/gwproxy/pod-deletion-cost-controller:main-26
+{{ if eq .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_resync_enable "true" }}
+        - -resync
+        - -resync-interval={{ .Cluster.ConfigItems.skipper_pod_deletion_cost_controller_resync_interval }}
+{{ end }}
+        image: container-registry.zalando.net/gwproxy/pod-deletion-cost-controller:main-27
         name: pod-deletion-cost-controller
         ports:
         - containerPort: 8080
