--- a/cluster/manifests/skipper/routegroup-probe.yaml
+++ b/cluster/manifests/skipper/routegroup-probe.yaml
@@ -13,7 +13,8 @@ spec:
   defaultBackends:
   - backendName: simulation
   hosts:
-  - cluster-health.{{ .Cluster.Alias }}.zalan.do
+  - cluster-health.{{ .Values.hosted_zone }}
+  - cluster-health-{{ .Cluster.Alias }}.{{ .Values.hosted_zone }}
   routes:
   - pathSubtree: /
     filters:
