canary-controller: add manifests
Allow later on test clusters and check metrics

Signed-off-by: Mustafa Abdelrahman <mustafa.abdelrahman@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -89,7 +89,7 @@ skipper_ingress_health_check_options: "period=10s,min-requests=10,min-drop-proba
 # Enables deployment of canary version
 skipper_ingress_canary_enabled: "true"
 skipper_ingress_test_single_pod: "false"
-
+skipper_canary_controller_enabled: "false"
 # When set to true (and dedicated node pool for skipper is also true) the
 # daemonset overhead will be subtracted from the cpu settings such
 # that skipper will perfectly fit on the node.
