--- a/cluster/manifests/skipper/hostname-credentials-controller.yaml
+++ b/cluster/manifests/skipper/hostname-credentials-controller.yaml
@@ -1,5 +1,6 @@
 # {{ if eq .Cluster.ConfigItems.skipper_oauth2_ui_login "true" }}
-# {{ $version := "main-13" }}
+# {{ $image := "container-registry.zalando.net/gwproxy/hostname-credentials-controller:main-13" }}
+# {{ $version := index (split $image ":") 1 }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -124,7 +125,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: controller
-              image: "container-registry.zalando.net/gwproxy/hostname-credentials-controller:{{ $version }}"
+              image: "{{ $image }}"
               terminationMessagePolicy: FallbackToLogsOnError
               args:
                 - -ingress-selector=application
