kube-aws-iam-controller: Update to version v0.3.0-35-gdd6d128
Update container-registry.zalando.net/teapot/kube-aws-iam-controller to version v0.3.0-35-gdd6d128

--- a/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
+++ b/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       hostNetwork: true
       containers:
       - name: kube-aws-iam-controller
-        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-33-g6df0443
+        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-35-gdd6d128
         env:
         - name: AWS_DEFAULT_REGION
           value: "{{.Cluster.Region}}"
