--- a/cluster/manifests/audittrail-adapter/daemonset.yaml
+++ b/cluster/manifests/audittrail-adapter/daemonset.yaml
@@ -23,8 +23,13 @@ spec:
     spec:
       serviceAccountName: audittrail-adapter
       priorityClassName: system-node-critical
+{{- if eq .Cluster.Provider "zalando-eks"}}
+      nodeSelector:
+        dedicated: cluster-seed
+{{- else}}
       nodeSelector:
         node.kubernetes.io/role: master
+{{- end}}
       tolerations:
       - operator: Exists
         effect: NoSchedule
