Make eks okta identity provider optional
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -1132,3 +1132,4 @@ eks_zalando_iam_aws_proxy_memory: "512Mi"
 eks_zalando_iam_aws_proxy_hpa_max_replicas: "10"
 eks_zalando_iam_aws_proxy_hpa_cpu_target: "80"
 eks_zalando_iam_aws_proxy_hpa_memory_target: "80"
+eks_okta_identity_provider: "true"
