--- a/cluster/cluster.yaml
+++ b/cluster/cluster.yaml
@@ -162,6 +162,7 @@ Resources:
       # TODO: vanity domain name? (certificate issue)
       #
       #
+{{- if eq .Cluster.ConfigItems.eks_okta_identity_provider "true" }}
   EKSIdentityProvider:
     Type: AWS::EKS::IdentityProviderConfig
     Properties:
@@ -175,6 +176,7 @@ Resources:
         GroupsClaim: "groups"
         GroupsPrefix: "okta:"
       Type: "oidc"
+{{- end }}
   EKSAccessEntryNodeAuth:
     Type: "AWS::EKS::AccessEntry"
     Properties:
@@ -2718,6 +2720,7 @@ Resources:
                 - BucketArn: !GetAtt AuditTrailBucket.Arn
 {{- end }}
 
+{{- if index .Cluster.ConfigItems "session_manager_destination_arn" }}
   SessionManagerLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
@@ -2777,6 +2780,7 @@ Resources:
                 Resource:
                   - !GetAtt SessionManagerLogGroup.Arn
       RoleName: "SessionManager-{{.Cluster.Alias}}"
+{{- end }}
 
   AWSNodeDecommissionerIAMRole:
     Type: 'AWS::IAM::Role'
