skipper-ingress: enable routesrv profiling
Signed-off-by: Alexander Yastrebov <alexander.yastrebov@zalando.de>

--- a/cluster/manifests/skipper/deployment.yaml
+++ b/cluster/manifests/skipper/deployment.yaml
@@ -525,6 +525,7 @@ spec:
         args:
           - "routesrv"
           - "-application-log-level={{ .Cluster.ConfigItems.skipper_routesrv_log_level }}"
+          - "-enable-profile"
           - "-kubernetes"
           - "-kubernetes-in-cluster"
           - "-kubernetes-path-mode=path-prefix"
