Define cluster_provider at CDP step level
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -80,6 +80,8 @@ pipeline:
             value: "teapot-kubernetes-e2e-results"
           - name: ETCD_ENDPOINTS
             value: "https://etcd-server.etcd.teapot-e2e.zalan.do:2479"
+          - name: CLUSTER_PROVIDER
+            value: "zalando-eks"
           - name: HOSTED_ZONE
             valueFrom:
               configMapKeyRef:
