Skip cluster creation via delivery.yaml
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/delivery.yaml
+++ b/delivery.yaml
@@ -82,6 +82,8 @@ pipeline:
             value: "https://etcd-server.etcd.teapot-e2e.zalan.do:2479"
           - name: CLUSTER_PROVIDER
             value: "zalando-eks"
+          - name: E2E_SKIP_CLUSTER_UPDATE
+            value: "true"
           - name: HOSTED_ZONE
             valueFrom:
               configMapKeyRef:
