enable debug logging in the admission-controller

--- a/cluster/manifests/02-admission-control/deployment.yaml
+++ b/cluster/manifests/02-admission-control/deployment.yaml
@@ -54,6 +54,8 @@ spec:
           - --address=:8085
           - --tls-cert-file=/etc/tls-certs/admission-controller.pem
           - --tls-key-file=/etc/tls-certs/admission-controller-key.pem
+          # TODO: remove debug flag
+          - --debug
 {{- if index .Cluster.ConfigItems "application_registry_url" }}
           - --application-registry-url={{.Cluster.ConfigItems.application_registry_url}}
 {{- end }}
