Add kubelet flags
Signed-off-by: Katyanna Moura <amelie.kn@gmail.com>

--- a/cluster/node-pools/worker-splitaz/userdata.yaml
+++ b/cluster/node-pools/worker-splitaz/userdata.yaml
@@ -46,6 +46,9 @@ write_files:
                - get-token
                - --cluster-name
                - "{{.Cluster.ID}}"
+               - --network-plugin=cni
+               - --cni-config-dir
+               - --cni-bin-dir
       contexts:
       - context:
           cluster: local
