--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -878,7 +878,7 @@ external_dns_zones_cache_duration: "1h"
 external_dns_mem: "4Gi"
 
 # select which cache to use for Cluster DNS: unbound or dnsmasq.
-dns_cache: "dnsmasq"
+dns_cache: "coredns"
 
 expirimental_dns_unbound_liveness_probe: "true"
 
